<resources>
    <string name="app_name">My Application</string>
    <string name="title_activity_main_page">mainPage</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_camera">Camera</string>
    <string name="title_messages">Messages</string>
    <string name="title_account">Account</string>
    <string name="user_1">\@username</string>
    <string name="hash_values">#NYC #ManhattanBridge #nature #evening # sunset #professionalPhotography</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account_fragment">Account Fragment</string>
    <string name="hint_email">Enter your email here</string>
    <string name="hint_password">Enter your password here</string>
    <string name="btn_login">LogIn</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_link_to_register">Not a member? Get an account!</string>
    <string name="minimum_password">Minimum 6 characters required!</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">Please provide us with your email, and password reset link will be set to you ;)</string>
    <string name="btn_reset_password">RESET PASSWORD</string>
    <string name="btn_back">Back</string>
</resources>
